@@ -1726,6 +1726,19 @@ manufacture:
     requiredItems:
       STR_STUN_BOMB: 1
 #END STUN GRENADE
+
+#BEGIN FIRE GRENADE
+  - name: STR_FIRE_GRENADE
+    category: STR_WEAPON
+    requires:
+      - STR_FIRE_GRENADE
+    space: 1
+    time: 10
+    cost: 1000
+    listOrder: 2403
+    requiredItems:
+      STR_FIRE_BOMB: 1
+#END STUN GRENADE
 ##END XCOM EQUIPMENT
 
 ##BEGIN ALIEN WEAPONS
