@@ -687,6 +687,13 @@ ufopaedia:
     requires:
       - STR_STUN_GRENADE
     listOrder: 4103
+  - id: STR_FIRE_GRENADE
+    type_id: 4
+    section: STR_WEAPONS_AND_EQUIPMENT
+    text: STR_FIRE_GRENADE_UFOPEDIA
+    requires:
+      - STR_FIRE_GRENADE
+    listOrder: 4104
 #END GRENADES
 
 #BEGIN EQUIPMENT
